# cpl-homework

./: CMakeLists.txt  README.md
1-types-io/: ASCII.c  CMakeLists.txt  change.c  equation.c  gravity.c  julian.c  pi.c  time.c
2-if-for-array/: CMakeLists.txt  Inverse-2.c  Inverse.c  collatz.c  factorial.c  series-2.c  series.c  single-2.c  single.c  standup.c
3-for-a-while/: 1  CMakeLists.txt  b-ternary-1-1.c  b-ternary-1.c  b-ternary-2-2.c  b-ternary-2.c  bubble-sort.c  decimal.c  flip.c  josephus-2.c  josephus.c  palindrome-1.c  palindrome-2.c  quick-sort-2.c  quick-sort.c  sort.c
4-loops/: 1  CMakeLists.txt  answer-statistics.c  formation.c  life.c  matrix-mult.c  mine.c  mines-2.c  mines.c  obstacle-right.c  obstacle.c  statistic.c  statistics-2.c  statistics-right.c  statistics.c  sudoku.c  trace.c
5-functions/: CMakeLists.txt  absolute-prime.c  behaviors.c  magic-square.c  next-permutation-wrong.c  next-permutation.c  pair-1.c  pair-2.c  pair-wrong.c  radix-1.c  radix.c  sum.c
6-recursion/: CMakeLists.txt  dec.c  decomposition.c  integration-1.c  integration.c  max-1.c  max.c  pascal.c  poi.c  tiles.c  triangle.c
7-data-types/: CMakeLists.txt  bracket-2.c  bracket-3.c  brackets-1.c  brackets.c  buddy-1.c  buddy-3.c  buddy.c  pour.c  rotate.c  stack.c  whac-a-mole-1.c  whac-a-mole-2.c  whac-a-mole-3.c  whac-a-mole.c  wine-1.c  wine.c
