add_executable(matrix-mult matrix-mult.c)
add_executable(formation formation.c)
add_executable(sudoku sudoku.c)
add_executable(mine mine.c)
add_executable(mines mines.c)
add_executable(mines-2 mines-2.c)
add_executable(trace trace.c)
add_executable(life life.c)
add_executable(statistics statistics.c)
add_executable(statistics-2 statistics-2.c)
add_executable(statistic statistic.c)
add_executable(statistics-right statistics-right.c)
add_executable(answer-statistics answer-statistics.c)
add_executable(obstacle obstacle.c)
add_executable(obstacle-right obstacle-right.c)