add_executable(behaviors behaviors.c)
add_executable(sum sum.c)
add_executable(magic-square magic-square.c)
add_executable(absolute-prime absolute-prime.c)
add_executable(radix-1 radix-1.c)
add_executable(radix radix.c)
add_executable(next-permutation-wrong next-permutation-wrong.c)
add_executable(next-permutation next-permutation.c)
add_executable(pair-1 pair-1.c)
add_executable(pair-2 pair-2.c)