add_executable(wine wine.c)
add_executable(wine-1 wine-1.c)
add_executable(stack stack.c)
add_executable(brackets brackets.c)
add_executable(brackets-1 brackets-1.c)
add_executable(bracket-2 bracket-2.c)
add_executable(bracket-3 bracket-3.c)
add_executable(buddy buddy.c)
add_executable(buddy-1 buddy-1.c)
add_executable(buddy-3 buddy-3.c)
add_executable(whac-a-mole whac-a-mole.c)
add_executable(whac-a-mole-1 whac-a-mole-1.c)
add_executable(whac-a-mole-2 whac-a-mole-2.c)
add_executable(whac-a-mole-3 whac-a-mole-3.c)
add_executable(rotate rotate.c)
add_executable(pour pour.c)